force-app/main/default/objects/Document_Checklist__c/Document_Checklist__c.object-meta.xml
<CustomObject>
    <description>Document Checklist stores the list of documents that were rejected during the document verification process.</description>
    <label>Document Checklist</label>
    <nameField>
        <label>Document Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Checklists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>