force-app/main/default/objects/Document_Checklist__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>