force-app/main/default/objects/Document_Checklist__c/fields/Document_Checklist_Header__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Checklist Header</label>
    <referenceTo>Document_Checklist_Header__c</referenceTo>
    <relationshipLabel>Document Checklists</relationshipLabel>
    <relationshipName>Document_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>