force-app/main/default/objects/Document_Checklist__c/fields/Rejection_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Remarks__c</fullName>
    <description>Rejection Remarks</description>
    <label>Rejection Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>